--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,11 @@
 @font-face {
-  font-family: Nexa Bold;
-  src: url(fonts/nexa_bold.otf);
+    font-family: Nexa Bold;
+    src: url(fonts/nexa_bold.otf);
 }
 
 @font-face {
-  font-family: Nexa Light;
-  src: url(fonts/nexa_light.otf);
+    font-family: Nexa Light;
+    src: url(fonts/nexa_light.otf);
 }
 
 * {
@@ -37,18 +37,18 @@ header {
     text-transform: uppercase;
 }
 
-.game{
+.game {
     font-family: 'Nexa Light', sans-serif;
 }
 
-.hud{
-    width: 100%;
+.hud {
+    width: 300px;
     margin: 0 auto;
     padding: 0;
     color: #f9f7f7;
 }
 
-.back-button{
+.back-button {
     margin-left: 10px;
     float: left;
     font-size: 18px;
@@ -56,11 +56,11 @@ header {
     letter-spacing: 1px;
 }
 
-.back-button:hover{
+.back-button:hover {
     cursor: pointer;
 }
 
-.time{
+.time {
     margin-right: 10px;
     float: right;
     font-size: 18px;
@@ -70,8 +70,7 @@ header {
 
 input,
 textarea,
-select 
-{
+select {
     -webkit-transition: all 0.30s ease-in-out;
     -moz-transition: all 0.30s ease-in-out;
     -ms-transition: all 0.30s ease-in-out;
@@ -93,27 +92,26 @@ select
 
 input:focus,
 textarea:focus,
-select:focus
-{
+select:focus {
     box-shadow: 0 0 5px #61628c;
     padding: 3%;
     border: 1px solid #61628c;
 }
 
 input[type="submit"],
-input[type="button"]{
+input[type="button"] {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     width: 100%;
     padding: 3%;
-    background: -webkit-linear-gradient(to left, rgba(39, 52, 99,0.9) 40%, rgba(139,66,86,0.9));  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, rgba(39, 52, 99,0.9) 40%, rgba(139,66,86,0.9)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to left, rgba(39, 52, 99, 0.9) 40%, rgba(139, 66, 86, 0.9));
+    background: linear-gradient(to left, rgba(39, 52, 99, 0.9) 40%, rgba(139, 66, 86, 0.9));
     background-attachment: fixed;
     border-bottom: 2px solid #666;
     border-top-style: none;
     border-right-style: none;
-    border-left-style: none;    
+    border-left-style: none;
     color: #fff;
     margin-top: 25px;
     font-size: 22px;
@@ -124,7 +122,7 @@ input[type="button"]{
 }
 
 input[type="submit"]:hover,
-input[type="button"]:hover{
+input[type="button"]:hover {
     transition: 0.2s;
 }
 
@@ -139,19 +137,19 @@ form {
     margin: 0 auto;
 }
 
-form > div {
+form>div {
     width: 48%;
 }
 
-form > div:nth-child(1) {
+form>div:nth-child(1) {
     float: left;
 }
 
-form > div:nth-child(2) {
+form>div:nth-child(2) {
     float: right;
 }
 
-form > div > select {
+form>div>select {
     margin-top: 5px;
 }
 
@@ -178,16 +176,6 @@ form > div > select {
     text-align: center;
     clear: both;
 }
-
-.hover:hover{
-    cursor: pointer;
-	-webkit-transform: rotateX(30deg);
-	-moz-transform: rotateX(30deg);
-	-ms-transform: rotateX(30deg);
-    transform: rotateX(30deg);
-    box-shadow: 0 5px 10px #0008;
-    }
-
 
 .scene {
     width: 140px;
@@ -217,17 +205,21 @@ form > div > select {
 }
 
 .card__face--front {
-    background: -webkit-linear-gradient(to left, rgba(39, 52, 99,0.9) 40%, rgba(139,66,86,0.9));  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, rgba(39, 52, 99,0.9) 40%, rgba(139,66,86,0.9)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to left, rgba(39, 52, 99, 0.9) 40%, rgba(139, 66, 86, 0.9));
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, rgba(39, 52, 99, 0.9) 40%, rgba(139, 66, 86, 0.9));
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background-attachment: fixed;
     border-radius: 5px;
 }
-  
+
 .card__face--back {
-    background: -webkit-linear-gradient(to left, rgba(39, 184, 196,0.9) 40%, rgba(178,194,140,0.9));  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, rgba(39, 184, 196,0.9) 40%, rgba(178,194,140,0.9)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to left, rgba(39, 184, 196, 0.9) 40%, rgba(178, 194, 140, 0.9));
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, rgba(39, 184, 196, 0.9) 40%, rgba(178, 194, 140, 0.9));
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background-attachment: fixed;
-    transform: rotateY( 180deg );
+    transform: rotateY(180deg);
     border-radius: 5px;
 }
 
@@ -237,14 +229,158 @@ form > div > select {
 }
 
 .icon {
-    background: -webkit-linear-gradient(to left, rgba(39, 52, 99,0.9) 40%, rgba(139,66,86,0.9));  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, rgba(39, 52, 99,0.9) 40%, rgba(139,66,86,0.9)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
+    background: -webkit-linear-gradient(to left, rgba(39, 52, 99, 0.9) 40%, rgba(139, 66, 86, 0.9));
+    background: linear-gradient(to left, rgba(39, 52, 99, 0.9) 40%, rgba(139, 66, 86, 0.9));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-attachment: fixed;
 }
 
-#gameboard{
+#gameboard {
     background: #0000;
-    transition: 5s;
+}
+
+@keyframes fadeIn {
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes cardFadeIn {
+    to {
+        opacity: 1;
+        transform:rotateX(0deg) scale(1);
+    }
+}
+
+@keyframes menuFadeIn {
+    to {
+        opacity: 1;
+    }
+}
+
+.fade-in-card {
+    opacity: 0;
+    transform:rotateX(60deg) scale(1.2);
+    animation: cardFadeIn .5s ease-in 0s forwards;
+}
+
+.fade-in-menu{
+    opacity: 0;
+    animation: menuFadeIn 0.5s ease-in 0s forwards;
+}
+
+.fade-in {
+    opacity: 0;
+    animation: fadeIn 1s ease-in 0.5s forwards;
+}
+
+.fade-in2 {
+    opacity: 0;
+    animation: fadeIn .5s ease-in 1.5s forwards;
+}
+
+.is-paused {
+    animation-play-state: paused;
+}
+
+.hover:hover{
+    cursor: pointer;
+    -webkit-transform: rotateX(30deg);
+    -moz-transform: rotateX(30deg);
+    -ms-transform: rotateX(30deg);
+    transform: rotateX(30deg);
+    box-shadow: 0 5px 10px #0008;
+}
+
+.modal {
+    background-color: rgba(0, 0, 0, 0.9);
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
+
+.modal-content {
+    text-align: center;
+    z-index: 10;
+    font-size: 60px;
+    text-transform: uppercase;
+    margin: 220px auto;
+    width: 650px;
+    background: -webkit-linear-gradient(to left, rgba(39, 52, 99, 1) 40%, rgba(139, 66, 86, 1));
+    background: linear-gradient(to left, rgba(39, 52, 99, 1) 40%, rgba(139, 66, 86, 1));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-attachment: fixed;
+}
+
+.modal-won {
+    font-size: 120px;
+}
+
+.modal-time-block {
+    margin-top: 20px;
+    width: 100%;
+    overflow: hidden;
+}
+
+.modal-your-time {
+    margin-top: 3px;
+    text-align: left;
+    margin-left: 29px;
+    font-family: Nexa Light;
+    float: left;
+}
+
+.modal-your {}
+
+.modal-time {
+    letter-spacing: 6px;
+}
+
+.modal-time-number {
+    background: -webkit-linear-gradient(to left, rgba(39, 184, 196, 0.9) 40%, rgba(178, 194, 140, 0.9));
+    background: linear-gradient(to left, rgba(39, 184, 196, 0.9) 40%, rgba(178, 194, 140, 0.9));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-family: Nexa Bold;
+    text-align: right;
+    font-size: 140px;
+    float: right;
+    margin-right: 5px;
+}
+
+.modal-buttons {
+    margin-top: 20px;
+    width: 100%;
+    font-size: 30px;
+    overflow: hidden;
+}
+
+.modal-menu {
+    float: left;
+    font-size: 120px;
+    text-align: left;
+    margin-left: 33px;
+}
+
+.modal-play-again {
+    margin-top: 3px;
+    float: right;
+    font-family: Nexa Bold;
+    font-size: 50px;
+    text-align: right;
+}
+
+.modal-play {
+    letter-spacing: 6px;
+}
+
+.modal-again {
+    letter-spacing: 4px;
 }
