--- a/static/style.css
+++ b/static/style.css
@@ -113,6 +113,7 @@ select {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     width: 100%;
+    height: 30px;
     text-align: center;
     background: #fff;
     margin-top: 5px;
@@ -120,7 +121,8 @@ select {
     border: 1px solid #ccc;
     padding: 3%;
     color: #555;
-    font-size: 20px;
+    font-size: 16px;
+    line-height: 30px;
     font-family: 'Nexa Light', sans-serif;
 }
 
